[package]
name = "lurk-cli"
version = "0.3.6"
edition = "2021"
authors = ["Jakob Waibel <salet@posteo.net>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
description = "lurk is a pretty (simple) alternative to strace."
license = "MIT OR Apache-2.0"

[[bin]]
name = "lurk"
path = "src/main.rs"

[features]
default = []

# Includes the syscall tables for all architectures.
all = [
#    "arm", "mips", "mips64", "powerpc", "powerpc64", "s390x",
#    "sparc", "sparc64", "x86",
    "x86_64", "riscv64", "aarch64", "loongarch64"
]

# Enable syscall tables for individual architectures.
aarch64 = []
#arm = []
loongarch64 = []
#mips = []
#mips64 = []
#powerpc = []
#powerpc64 = []
#s390x = []
#sparc = []
#sparc64 = []
#x86 = []
x86_64 = []
riscv64 = []

[dependencies]
anyhow = "1"
atty = "0.2"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.15.8"
libc = "0.2"
linux-personality = "1"
#nix = { version = "0.29", features = ["ptrace", "signal"] }
nix = { git = "https://github.com/fearyncess/nix", branch = "loongarch64-ptrace-regs", features = ["ptrace", "signal"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syscalls = { git = "https://github.com/fearyncess/syscalls", rev = "38c69f190fdb75c8107c70bf5e349c4f52a464c5", features = ["full"] }
users = "0.11"
